Fixed spacing on Junes bio page

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -717,6 +717,7 @@ img {
 }
 
 #june-odongo {
+  padding-top: 50px;
 }
 
 #clement-mwangi,
